--- a/view/hard12.html
+++ b/view/hard12.html
@@ -7,9 +7,34 @@
   <script src="../JS/hard12.js">
 
   </script>
+  <style>
+    .container {
+      display: flex;
+      align-items: flex-start;
+      padding: 20px;
+      border: 1px solid #ccc;
+    }
+    .container img {
+      width: 50%;
+      margin-right: 20px;
+    }
+    .container .description {
+      max-width: 500px;
+    }
+  </style>
 </head>
 <body>
   <h1>비동기: Promise</h1>
-
+  <h2>-> 비동기 작업을 효율적으로 처리할 수 있도록 도와주는 자바스크립트의 내장 객체</h2>
+  <div class="container">
+    <img src="../images/promise1.png" >
+    <div class="description">
+      <h2>설명</h2>
+      <p>
+        비동기 작업을 Lapping하여 관리하는 객체 <br>
+        이 페이지에서는 <strong>비동기 작업 실행, 상태관리, 결과 저장</strong>만 서술함
+      </p>
+    </div>
+  </div>
 </body>
 </html>
