--- a/view/hard13.html
+++ b/view/hard13.html
@@ -7,6 +7,21 @@
   <script src="../JS/hard13.js">
 
   </script>
+  <style>
+    .container {
+      display: flex;
+      align-items: flex-start;
+      padding: 20px;
+      border: 1px solid #ccc;
+    }
+    .container img {
+      width: 50%;
+      margin-right: 20px;
+    }
+    .container .description {
+      max-width: 500px;
+    }
+  </style>
 </head>
 <body>
   <h1>비동기: Async&Await</h1>
